tests/files/type_checker_tests/should_pass/247.cmdr
//Test that lambdas type check
add = fn (a:int, b): int -> { 
    return a + b;
};
add(2, 3);
x = add(2, 3.4);
