tests/files/type_checker_tests/should_fail/191.cmdr
//Should fail if using variable out of scope
fn add(a:int, b:int) {
    return a + b;
}
println a;
